--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.7.1",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.4.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "xlsx": "^0.18.5"
